--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Bp Design</title>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="M-8BQ2IqTbzqeKSO24OjW8zBHVTlLj_cN2yFKTfnnd8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
