--- a/index.html
+++ b/index.html
@@ -52,39 +52,45 @@
 </head>
 <body>
     <header>
-      <h1>Bijou Book - اكتشف أجمل تصاميم المجوهرات</h1>
-      <p>منصة Bijou Book توفر لك تجربة فريدة لتصفح وشراء مجوهرات أنيقة ومميزة بكل سهولة.</p>
+      <img src="logo.png" alt="شعار Bijou Book" />
+      <h1>Bijou Book - منصة المجوهرات المغربية</h1>
     </header>
   
     <main>
-      <section id="featured">
-        <h2>مجوهرات مميزة مختارة لك</h2>
-        <ul>
-          <li>خواتم ذهبية بتصاميم عصرية</li>
-          <li>أطقم ألماس فاخرة</li>
-          <li>أساور يدوية الصنع من الفضة</li>
-          <li>سلاسل ذات طابع مغربي تقليدي</li>
-        </ul>
-      </section>
+      <img src="photo.png" alt="Bijou Book Sample" class="main-photo" />
   
-      <section id="about">
-        <h2>لماذا Bijou Book؟</h2>
+      <section id="intro">
+        <h2>من نحن</h2>
         <p>
-          نحن نؤمن أن لكل قطعة مجوهرات قصة. في Bijou Book، نسعى لتقديم قطع فنية تمزج بين
-          الأناقة والجودة، مع تجربة تصفح سهلة وسريعة.
+          Bijou Book هي منصة مغربية لعرض وبيع المجوهرات الراقية بتصاميم فريدة تجمع بين الأصالة والحداثة.
+          اكتشف تشكيلتنا من الخواتم، الأساور، الأقراط، والقلائد المصنوعة يدويًا بكل حب واحترافية.
         </p>
       </section>
   
-      <section id="contact">
-        <h2>تواصل معنا</h2>
-        <p>للاستفسار أو التعاون، راسلنا على: <a href="mailto:contact@bijou-book.cloud">contact@bijou-book.cloud</a></p>
+      <section id="why-us">
+        <h2>لماذا تختار Bijou Book؟</h2>
+        <ul>
+          <li>تشكيلة متنوعة من المجوهرات المغربية الأصيلة</li>
+          <li>تصاميم مخصصة حسب الطلب</li>
+          <li>توصيل سريع وآمن لجميع المدن المغربية</li>
+          <li>دفع إلكتروني آمن</li>
+        </ul>
+      </section>
+  
+      <section id="seo-text">
+        <h2>مجوهرات فاخرة عبر الإنترنت</h2>
+        <p>
+          إذا كنت تبحث عن مجوهرات فاخرة على الإنترنت في المغرب، فإن Bijou Book هو المكان المناسب لك.
+          نوفر لك تجربة تسوق إلكتروني سهلة وآمنة مع تصاميم تناسب جميع الأذواق، سواء كنت تفضل المجوهرات الذهبية أو الفضة أو الأحجار الكريمة.
+          Bijou Book - مجوهرات مغربية أصلية بتصميم حديث وسعر مناسب.
+        </p>
       </section>
     </main>
   
     <footer>
-      <p>&copy; 2025 Bijou Book. جميع الحقوق محفوظة.</p>
+      &copy; 2025 Bijou Book - جميع الحقوق محفوظة.
     </footer>
-  </body>
+</body>
   
 
 </html>
