--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta name="description" content="اكتشف أجمل تصاميم المجوهرات على Bijou Book. منصتك لتصفح قطع فريدة، أنيقة، ومميزة بسهولة وسرعة." />
 
 <!-- Keywords (اختيارية، لكن غير مؤثرة كثيراً) -->
-<meta name="keywords" content="bijou, book, مجوهرات, منصة, اكتشاف, تصميم, أناقة, bijou-book.cloud" />
+<meta name="keywords" content="xx2@rtxcvr, bijou, book, مجوهرات, منصة, اكتشاف, تصميم, أناقة, bijou-book.cloud" />
 
 <!-- Author -->
 <meta name="author" content="Hamza Ait Laarabi" />
@@ -53,7 +53,7 @@
 <body>
     <header>
       <img src="logo.png" alt="شعار Bijou Book" />
-      <h1>Bijou Book - منصة المجوهرات المغربية</h1>
+      <h1>Bijou Book</h1>
     </header>
   
     <main>
